--- a/challenges/MiW/index.html
+++ b/challenges/MiW/index.html
@@ -9,7 +9,7 @@
 <header class="mainHeader">
    <nav class="nav mainNav">
       <ul>
-         <li><a href=index.html>HOME</a></li>
+         <li><a href="index.html">HOME</a></li>
          <li><a href="store.html">STORE</a></li>
          <li><a href="about.html">ABOUT</a></li>
       </ul>
