better refresh button

--- a/week07/index.html
+++ b/week07/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>I Can See The Future:</h1>
-        <button onclick="window.location.reload();">New Fortune?</button>
+        <button onclick="history.go(0)";>New Fortune?</button>
         <p></p>
         
         
