--- a/challenges/koreanLearning/koreanLearning.html
+++ b/challenges/koreanLearning/koreanLearning.html
@@ -18,6 +18,7 @@
       <li><div id="lesson2-id"></div></li>
       <li><div id="lesson3-id"></div></li>
       <li><div id="lesson4-id"></div></li>
+      <li><div id="lesson5-id"></div></li>
     </ul>
       <script src="script.js"></script>
   </body>
